--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -87,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@color/ButtonBackground"
+        android:onClick="toTheHighscores"
         android:text="@string/save"
         android:textAlignment="center"
         android:textSize="24sp"
