Add: Unable to go back to certain activities Fix: Round buttons in game to match other activities

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
     tools:context="case2.iths.com.QuizGame.ResultActivity"
-    tools:layout_editor_absoluteY="25dp">
+    tools:layout_editor_absoluteY="25dp"
+    android:noHistory="true">
 
     <TextView
         android:id="@+id/top_text"
