You can now save the results to the Highscores by inserting the name and clicking button Save. Save button takes you directly to Highscores activity and shows the the highscores for the category you just played by default.

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@color/ButtonBackground"
-        android:onClick="toTheHighscores"
+        android:onClick="onSaveButtonClick"
         android:text="@string/save"
         android:textAlignment="center"
         android:textSize="24sp"
