--- a/app/src/main/res/layout/dropdown_list_item.xml
+++ b/app/src/main/res/layout/dropdown_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="49dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="#FE9E9E"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
