--- a/app/src/main/res/layout/activity_edit_statement.xml
+++ b/app/src/main/res/layout/activity_edit_statement.xml
@@ -52,7 +52,7 @@
     <Spinner
         android:id="@+id/spinner_edit_category"
         android:layout_width="344dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="25dp"
         android:background="@null"
         android:spinnerMode="dialog"
