--- a/app/src/main/res/layout/dropdown_list_item.xml
+++ b/app/src/main/res/layout/dropdown_list_item.xml
@@ -9,9 +9,9 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="49dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:background="#FE9E9E"
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="4dp"
+        android:background="@drawable/button_shape"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
