--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,7 +10,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="case2.iths.com.QuizGame.PlayGameActivity">
+        tools:context="case2.iths.com.QuizGame.CategoryWindowActivity">
 
         <TextView
             android:id="@+id/top_text"
