--- a/app/src/main/res/layout/item_highscore_list.xml
+++ b/app/src/main/res/layout/item_highscore_list.xml
@@ -20,11 +20,11 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/text_amount_of_rounds"
+                android:id="@+id/text_amount_of_statements"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
-                android:text="@string/amount_of_rounds"
+                android:text="@string/amount_of_statements"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/text_rounds"
                 app:layout_constraintTop_toBottomOf="@+id/text_name" />
