Add: rectangular pressed button

--- a/app/src/main/res/layout/activity_singleplayer_game.xml
+++ b/app/src/main/res/layout/activity_singleplayer_game.xml
@@ -26,11 +26,11 @@
         android:id="@+id/display_seconds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
         android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_text_category"/>
+        app:layout_constraintTop_toBottomOf="@+id/top_text_category" />
 
     <TextView
         android:id="@+id/point_text"
@@ -115,11 +115,18 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
+    <TextView
+        android:id="@+id/text_statements_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="50" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:background="@drawable/button_rectangle"
+        android:padding="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameField"
+        tools:text="statements left" />
 
 </android.support.constraint.ConstraintLayout>
