--- a/app/src/main/res/layout/activity_amount_of_statements.xml
+++ b/app/src/main/res/layout/activity_amount_of_statements.xml
@@ -26,6 +26,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/category_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="16dp"
+        android:textSize="36sp"
+        android:fontFamily="@font/lobster_two_bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_text"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <Button
         android:id="@+id/button_statements_5"
         android:layout_width="0dp"
