I ran Analyze-Inspect code and fixed so many errors as possible.

--- a/app/src/main/res/layout/activity_create_statements.xml
+++ b/app/src/main/res/layout/activity_create_statements.xml
@@ -67,10 +67,10 @@
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
             android:checked="false"
-            android:text="sant"
-            android:textOff="Sant"
+            android:text="@string/true_statement"
+            android:textOff="@string/true_statement"
             android:onClick="onButtonTrueClicked"
-            android:textOn="Sant"
+            android:textOn="@string/true_statement"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/gameField_add_statement"
@@ -83,10 +83,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
-            android:text="falskt"
+            android:text="@string/false_statement"
             android:onClick="onButtonFalseClicked"
-            android:textOff="Falskt"
-            android:textOn="Falskt"
+            android:textOff="@string/false_statement"
+            android:textOn="@string/false_statement"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/togglebutton_add_true"
