--- a/app/src/main/res/layout/activity_singleplayer_game.xml
+++ b/app/src/main/res/layout/activity_singleplayer_game.xml
@@ -97,8 +97,8 @@
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
             android:onClick="trueButtonPressed"
-            android:text="Sant"
-            android:textSize="20dp"
+            android:text="@string/true_statement"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/gameField"
             app:layout_constraintRight_toLeftOf="@+id/button_false"
@@ -111,8 +111,8 @@
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
             android:onClick="falseButtonPressed"
-            android:text="Falskt"
-            android:textSize="20dp"
+            android:text="@string/false_statement"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/button_true"
             app:layout_constraintRight_toRightOf="@+id/gameField"
