--- a/app/src/main/res/layout/item_highscore_list.xml
+++ b/app/src/main/res/layout/item_highscore_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -33,7 +32,6 @@
                 android:id="@+id/text_rounds"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_name" />
@@ -46,8 +44,7 @@
                 android:textAlignment="center"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 app:layout_constraintStart_toEndOf="@+id/text_score"
-                app:layout_constraintTop_toBottomOf="@+id/text_name"
-                tools:text="points" />
+                app:layout_constraintTop_toBottomOf="@+id/text_name" />
 
             <TextView
                 android:id="@+id/text_score"
