--- a/app/src/main/res/layout/item_highscore_list.xml
+++ b/app/src/main/res/layout/item_highscore_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -19,21 +20,20 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/text_amount_of_statements"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:text="@string/amount_of_statements"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/text_rounds"
-                app:layout_constraintTop_toBottomOf="@+id/text_name" />
-
-            <TextView
                 android:id="@+id/text_rounds"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_name"
+                tools:text="15" />
+
+            <TextView
+                android:id="@+id/text_amount_of_statements"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="@string/amount_of_statements"
+                app:layout_constraintEnd_toStartOf="@+id/text_rounds"
                 app:layout_constraintTop_toBottomOf="@+id/text_name" />
 
             <TextView
@@ -41,17 +41,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:textAlignment="center"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 app:layout_constraintStart_toEndOf="@+id/text_score"
-                app:layout_constraintTop_toBottomOf="@+id/text_name" />
+                app:layout_constraintTop_toBottomOf="@+id/text_name"
+                tools:text="points" />
 
             <TextView
                 android:id="@+id/text_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:text="15"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_name" />
 
@@ -59,13 +57,13 @@
                 android:id="@+id/text_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:layout_editor_absoluteY="0dp"
+                tools:text="Alvar" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
