FIXED: Splashscreen before singleplayer added

--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:background="@color/ButtonBackground"
-        android:text="@string/singelplayer"
+        android:text="@string/singleplayer"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         android:textStyle="bold"
